se sube tarea del curriculo

--- a/trabajosPracticos/pagina1.html
+++ b/trabajosPracticos/pagina1.html
@@ -47,7 +47,7 @@
                 <p><strong>Ubicación:</strong><br> Bogotá-Colombia</p>
             </div>
         </div>
-        <a href="index.html">Volver a la pagina principal</a>
+        <a href="curriculo.html">Volver a la pagina principal</a>
     </body>
 </div>
 
