se avanza css y ciclos

--- a/Sesion3/pagina1.html
+++ b/Sesion3/pagina1.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
     <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <div class="casilla">
 
@@ -35,7 +36,8 @@
                 <p><strong>Teléfono:</strong><br> 300 894 2706</p>
             </div>
             <div class="contenedor">
-                <p><strong>WhatsApp:</strong><br> 573008942706</p>
+                
+                <p><strong><i class="fa-brands fa-whatsapp"></i> WhatsApp:</strong><br> 573008942706</p>
             </div>
             <div class="contenedor">
                 <p><strong>Correo:</strong><br> atukal@gmail.com</p>
